:bug: Delete Route
Fixed Delete Route View

--- a/src/main/resources/templates/transactions/deleteForm.html
+++ b/src/main/resources/templates/transactions/deleteForm.html
@@ -5,31 +5,36 @@
     <div class="container mb-black text-white">
       <form
         class="form-group"
-        th:action="@{/transations/delete/${transaction.id}}"
+        th:action="@{/transactions/delete}"
         method="POST"
-        th:object="${formDeleteTransaction}"
+        th:object="${deleteTransactionForm}"
       >
         <label class="form-control" for="Adress">Adress</label>
         <input
           id="Adress"
           class="form-control"
-          th:text="${transaction.adress}"
+          th:placeholder="${transaction.adress}"
           readonly
         />
         <label class="form-control" for="Date">Date</label>
         <input
           id="Date"
           class="form-control"
-          th:text="${transaction.date}"
+          th:placeholder="${transaction.date}"
           readonly
         />
         <label class="form-control" for="user">Usuario</label>
-        <input id="user" class="form-control" th:text="${user.name}" readonly />
+        <input
+          id="user"
+          class="form-control"
+          th:placeholder="${user.name}"
+          readonly
+        />
         <label class="form-control" for="Value">Value</label>
         <input
           id="Value"
           class="form-control"
-          th:text="${transaction.value}"
+          th:placeholder="${transaction.value}"
           readonly
         />
         <input type="hidden" th:field="*{id}" readonly />
