:sparkles: Change Route
Added Change Route to Transactions Controller

--- a/src/main/resources/templates/transactions/deleteForm.html
+++ b/src/main/resources/templates/transactions/deleteForm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head th:replace="~{head::head('Formulário de Delete')}"></head>
-  <body>
-    <div class="container mb-black text-white">
+  <body class="bg-dark text-white">
+    <div class="container">
       <form
         class="form-group"
         th:action="@{/transactions/delete}"
