:recycle: Command Pattern
Added Command Pattern to generate MVC

--- a/src/main/resources/templates/transactions/home.html
+++ b/src/main/resources/templates/transactions/home.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head th:replace="~{head::head('Transactions')}"> </head>
-  <body class="bg-dark text-white"><div class="container"><div class="row">
-    <div class="col-12 d-flex flex-row align-items-center justify-content-between p-6 border-bottom-white-1">
-      <ul th:each="transaction : ${transactions}">
-        <li th:text="${transaction.adress}"></li>
-        <li th:text="${transaction.value}"></li>
-        <li th:text="${transaction.date}"></li>
-      </ul>
+  <body class="bg-dark text-white">
+    <div class="container d-flex align-items-center justify-content-center">
+    <div class="card bg-dark col-12 border-0">
+      <div class="card-header bg-secondary text-white p-6 fs-4 text-center d-flex align-items-center justify-content-between ">Transactions Entries<button class="btn btn-primary"><a class="text-decoration-none text-white" th:href="@{/transactions/cadastro}">New</a></button></div>
+      <div class="card-body mt-1">
+      <div th:each="transaction : ${transactions}" class=" mt-2 card bg-dark border-1-solid-light mt-2 d-flex flex-column align-items-center justify-content-center">
+        <div class="card-body">
+        <span class="text-center text-white fs-4 " >Transaction #<span th:text="${transaction.id}"></span></span>
+        <div >Adress: <span th:text="${transaction.adress}"></span></div>
+        <div>Value: <span th:text="${transaction.value}"></span> R$</div>
+        <div>Date/Hours: <span th:text="${#strings.replace(transaction.date,'T',' / ')}"></span></div>
+        <div>User: <span th:text="${transaction.user.name}"></span></div>
+        <div>User_Id: <span th:text="${transaction.user.id}"></span></div>
+        <div class="d-flex flex-row justify-content-between mt-2 mb-2">
+        <button type="button"class="btn btn-warning me-4"><a class="text-white text-decoration-none" th:href="@{/transactions/change/__${transaction.id}__}">Change</a></button>
+        <button class="btn btn-danger ms-4"><a class="text-white text-decoration-none" th:href="@{/transactions/delete/__${transaction.id}__}">Exclude</a></button>
+      </div>
+      </div>
+      </div>
+      </div>
     </div>
-  </div></body>
+  </body>
 </html>
