--- a/src/main/resources/templates/transactions/changeForm.html
+++ b/src/main/resources/templates/transactions/changeForm.html
@@ -31,6 +31,12 @@
           th:field="*{id}"
           readonly
         />
+        <input
+          type="hidden"
+          th:value="${transaction.date}"
+          th:field="*{date}"
+          readonly
+        />
         <button type="submit" class="btn btn-warning">Alterar</button>
       </form>
     </div>
