--- a/src/main/resources/templates/transactions/home.html
+++ b/src/main/resources/templates/transactions/home.html
@@ -4,7 +4,11 @@
   <body class="bg-dark text-white">
     <div class="container d-flex align-items-center justify-content-center">
     <div class="card bg-dark col-12 border-0">
-      <div class="card-header bg-secondary text-white p-6 fs-4 text-center d-flex align-items-center justify-content-between ">Transactions Entries<button class="btn btn-primary"><a class="text-decoration-none text-white" th:href="@{/transactions/cadastro}">New</a></button></div>
+      <div class="card-header bg-secondary text-white p-6 fs-4 text-center d-flex align-items-center justify-content-between ">Transactions Entries
+        <button th:if="${prevPage >= 0}" class="btn btn-primary"><a class="text-decoration-none text-white" th:href="@{/transactions/__${prevPage}__}">Prev Page</a></button>
+        <button class="btn btn-primary"><a class="text-decoration-none text-white" th:href="@{/transactions/__${nextPage}__}">Next Page</a></button>
+        <button class="btn btn-primary"><a class="text-decoration-none text-white" th:href="@{/transactions/cadastro}">New</a></button>
+      </div>
       <div class="card-body mt-1">
       <div th:each="transaction : ${transactions}" class=" mt-2 card bg-dark border-1-solid-light mt-2 d-flex flex-column align-items-center justify-content-center">
         <div class="card-body">
