--- a/src/main/resources/templates/user/dashboard.html
+++ b/src/main/resources/templates/user/dashboard.html
@@ -11,6 +11,9 @@
           <a th:href="@{/transactions}"
             ><button class="btn btn-primary">Transactions</button></a
           >
+          <a th:href="@{/logout}"
+            ><button class="btn btn-warning">Logout</button></a
+          >
         </div>
         <div
           class="card-body bg-light border-1-solid-dark container d-flex flex-column align-items-center"
