--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -37,9 +37,9 @@
           class="form-control"
           placeholder="Insert your adress"
         />
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <a th:href="@{/user/login}" class="text-white text-decoration-none"
+      <a th:href="@{/user}" class="text-white text-decoration-none"
         >Already have an account? Login here.</a
       >
     </div>
