--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head th:replace="~{head::head('New User Form')}"> </head>
+  <head th:replace="~{head::head('Login Page')}"> </head>
   <body class="bg-dark">
     <div class="container">
       <form th:action="@{/user}" method="post" class="card form-group">
